include/dss_capi.h

    /*
    Number of Samples in Monitor at Present
    */
    DSS_CAPI_DLL int32_t Monitors_Get_SampleCount(void);
    DSS_CAPI_DLL void Monitors_SampleAll(void);
    DSS_CAPI_DLL void Monitors_SaveAll(void);
    /*
    Number of Monitors
    */
    DSS_CAPI_DLL int32_t Monitors_Get_Count(void);
    DSS_CAPI_DLL void Monitors_Process(void);
    DSS_CAPI_DLL void Monitors_ProcessAll(void);
    /*
    Array of doubles for the specified channel  (usage: MyArray = DSSMonitor.Channel(i)) A Save or SaveAll  should be executed first. Done automatically by most standard solution modes.
    */
    DSS_CAPI_DLL void Monitors_Get_Channel(double** ResultPtr, int32_t* ResultCount, int32_t Index);
    /*
    Same as Monitors_Get_Channel but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_Channel_GR(int32_t Index);
    /*
    Array of doubles containing frequency values for harmonics mode solutions; Empty for time mode solutions (use dblHour)
    */
    DSS_CAPI_DLL void Monitors_Get_dblFreq(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_dblFreq but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_dblFreq_GR(void);
    /*
    Array of doubles containgin time value in hours for time-sampled monitor values; Empty if frequency-sampled values for harmonics solution  (see dblFreq)
    */
    DSS_CAPI_DLL void Monitors_Get_dblHour(double** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_dblHour but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_dblHour_GR(void);
    /*
    Monitor File Version (integer)
    */
    DSS_CAPI_DLL int32_t Monitors_Get_FileVersion(void);
    /*
    Header string;  Array of strings containing Channel names
    */
    DSS_CAPI_DLL void Monitors_Get_Header(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Monitors_Get_Header but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Monitors_Get_Header_GR(void);
    /*
    Number of Channels in the active Monitor
    */
    DSS_CAPI_DLL int32_t Monitors_Get_NumChannels(void);
    /*
    Size of each record in ByteStream (Integer). Same as NumChannels.
    */
    DSS_CAPI_DLL int32_t Monitors_Get_RecordSize(void);