src/v7/CAPI_Monitors.pas


//------------------------------------------------------------------------------
function Monitors_Get_SampleCount(): Integer; CDECL;
var
    pMon: TMonitorObj;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    Result := pMon.SampleCount;
end;
//------------------------------------------------------------------------------
procedure Monitors_SampleAll(); CDECL;
begin
    if ActiveCircuit = NIL then
        Exit;
    MonitorClass.SampleAll;
end;
//------------------------------------------------------------------------------
procedure Monitors_SaveAll(); CDECL;
begin
    if ActiveCircuit = NIL then
        Exit;
    MonitorClass.SaveAll;
end;
//------------------------------------------------------------------------------
function Monitors_Get_Count(): Integer; CDECL;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        Exit;
    Result := ActiveCircuit.Monitors.ListSize;
end;
//------------------------------------------------------------------------------
procedure Monitors_Process(); CDECL;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    pMon.PostProcess;
end;
//------------------------------------------------------------------------------
procedure Monitors_ProcessAll(); CDECL;
begin
    if ActiveCircuit = NIL then
        Exit;
    MonitorClass.PostProcessAll;
end;
//------------------------------------------------------------------------------
procedure Monitors_Get_Channel(var ResultPtr: PDouble; ResultCount: PInteger; Index: Integer); CDECL;
// Return an array of doubles for selected channel
var
    Result: PDoubleArray;
    Header: THeaderRec;
    i: Integer;
    pMon: TMonitorObj;
    SngBuffer: pSingleArray;
    AllocSize: Integer;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    Result[0] := 0;
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    if pMon.SampleCount <= 0 then
        Exit;
    ReadMonitorHeader(Header, FALSE);   // FALSE = leave at beginning of data

    if (Index < 1) or (Index > Header.RecordSize {NumChannels}) then
    begin
        DoSimpleMsg(Format(
            'Monitors.Channel: invalid channel index (%d), monitor "%s" has %d channels.',
            [Index, pMon.Name, Header.RecordSize]
            ), 5888);
        Exit;
    end;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, pMon.SampleCount);

    AllocSize := Sizeof(Single) * (Header.RecordSize + 2); // Include Hour and Second fields
    Index := Index + 2; // Skip Hour and Second fields
    SngBuffer := Allocmem(AllocSize); // Need a buffer to convert from float32 to float64
    for i := 1 to pMon.SampleCount do
    begin
        pMon.MonitorStream.Read(sngBuffer^[1], AllocSize);  // read rest of record
        Result[i - 1] := sngBuffer^[Index];
    end;
    Reallocmem(SngBuffer, 0);  // Dispose of buffer
end;

procedure Monitors_Get_Channel_GR(Index: Integer); CDECL;
// Same as Monitors_Get_Channel but uses global result (GR) pointers
begin
    Monitors_Get_Channel(GR_DataPtr_PDouble, GR_CountPtr_PDouble, Index)
end;

//------------------------------------------------------------------------------
procedure Monitors_Get_dblFreq(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
// Return an array of doubles for frequence for Harmonic solutions
var
    Result: PDoubleArray;
    Header: THeaderRec;
    k, i: Integer;
    FirstCol: String;
    pMon: TMonitorObj;
    SngBuffer: pSingleArray;
    freq: Single;
    s: Single;
    AllocSize: Integer;

begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    Result[0] := 0;
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    if pMon.SampleCount <= 0 then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMon.SampleCount - 1) + 1);
    ReadMonitorHeader(Header, FALSE);   // leave at beginning of data
    AuxParser.CmdString := String(Header.StrBuffer);
    AuxParser.AutoIncrement := TRUE;
    FirstCol := AuxParser.StrValue;  // Get rid of first two columns
    AuxParser.AutoIncrement := FALSE;
    // check first col to see if it is "Freq" for harmonics solution
    if SysUtils.CompareText(FirstCol, 'freq') = 0 then
    begin
        AllocSize := Sizeof(Single) * Header.RecordSize;
        SngBuffer := Allocmem(AllocSize);
        k := 0;
        for i := 1 to pMon.SampleCount do
        begin
            with pMon.MonitorStream do
            begin
                Read(freq, SizeOf(freq));  // frequency
                Read(s, SizeOf(s));   // harmonic
                Read(sngBuffer^[1], AllocSize);  // read rest of record
            end;
            Result[k] := freq;
            inc(k);
        end;
        Reallocmem(SngBuffer, 0);  // Dispose of buffer
    end
    else
    begin   // Not harmonic solution, so return nil array
        pMon.MonitorStream.Seek(0, soFromEnd); // leave stream at end
    end;
end;

procedure Monitors_Get_dblFreq_GR(); CDECL;
// Same as Monitors_Get_dblFreq but uses global result (GR) pointers
begin
    Monitors_Get_dblFreq(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Monitors_Get_dblHour(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
// Return an array of doubles for time in hours
var
    Result: PDoubleArray;
    Header: THeaderRec;
    k, i: Integer;
    FirstCol: String;
    pMon: TMonitorObj;
    SngBuffer: pSingleArray;
    hr: Single;
    s: Single;
    AllocSize: Integer;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    Result[0] := 0;
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    if pMon.SampleCount <= 0 then
        Exit;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (pMon.SampleCount - 1) + 1);
    ReadMonitorHeader(Header, FALSE);   // leave at beginning of data
    AuxParser.CmdString := String(Header.StrBuffer);
    AuxParser.AutoIncrement := TRUE;
    FirstCol := AuxParser.StrValue;  // Get rid of first two columns
    AuxParser.AutoIncrement := FALSE;
    // check first col to see if it is "Hour"
    if Sysutils.CompareText(FirstCol, 'hour') = 0 then
    begin
        AllocSize := Sizeof(Single) * Header.RecordSize;
        SngBuffer := Allocmem(AllocSize);
        k := 0;
        for i := 1 to pMon.SampleCount do
        begin
            with pMon.MonitorStream do
            begin
                Read(hr, SizeOf(hr));  // Hour
                Read(s, SizeOf(s));   // Seconds past the hour
                Read(sngBuffer^[1], AllocSize);  // read rest of record
            end;
            Result[k] := hr + s / 3600.0;
            inc(k);
        end;
        Reallocmem(SngBuffer, 0);  // Dispose of buffer
    end
    else
    begin   // Not time solution, so return nil array
        pMon.MonitorStream.Seek(0, soFromEnd); // leave stream at end
    end;
end;

procedure Monitors_Get_dblHour_GR(); CDECL;
// Same as Monitors_Get_dblHour but uses global result (GR) pointers
begin
    Monitors_Get_dblHour(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
function Monitors_Get_FileVersion(): Integer; CDECL;
var
    Header: THeaderRec;
begin
    if ActiveCircuit <> NIL then
    begin
        ReadMonitorHeader(Header, TRUE);
        Result := Header.Version;
        Exit;
    end;
    Result := 0;
end;
//------------------------------------------------------------------------------
procedure Monitors_Get_Header(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
// Variant list of strings with names of all channels
var
    Result: PPAnsiCharArray;
    Header: THeaderRec;
    k: Integer;
    ListSize: Integer;
    SaveDelims: String;
    SaveWhiteSpace: String;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit = NIL then
        Exit;
    if ActiveCircuit.Monitors.Active = NIL then
        Exit;
    ReadMonitorHeader(Header, TRUE);
    if Header.RecordSize <= 0 then
        Exit;
    ListSize := Header.RecordSize;
    DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, ListSize);

    with ActiveCircuit do
    begin
        k := 0;
        SaveDelims := AuxParser.Delimiters;
        AuxParser.Delimiters := ',';
        SaveWhiteSpace := AuxParser.Whitespace;
        AuxParser.Whitespace := '';
        AuxParser.CmdString := String(Header.StrBuffer);
        AuxParser.AutoIncrement := TRUE;
        AuxParser.StrValue;  // Get rid of first two columns
        AuxParser.StrValue;
        while k < ListSize do
        begin
            Result[k] := DSS_CopyStringAsPChar(AuxParser.StrValue);
            Inc(k);
        end;
        AuxParser.AutoIncrement := FALSE; // be a good citizen
        AuxParser.Delimiters := SaveDelims;
        AuxParser.Whitespace := SaveWhiteSpace;
    end;
end;

procedure Monitors_Get_Header_GR(); CDECL;
// Same as Monitors_Get_Header but uses global result (GR) pointers
begin
    Monitors_Get_Header(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Monitors_Get_NumChannels(): Integer; CDECL;
var
    Header: THeaderRec;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        Exit;
    ReadMonitorHeader(Header, TRUE);
    Result := Header.RecordSize;
end;
//------------------------------------------------------------------------------
function Monitors_Get_RecordSize(): Integer; CDECL;
var
    Header: THeaderRec;
begin
    Result := 0;
    if ActiveCircuit = NIL then
        Exit;
    ReadMonitorHeader(Header, TRUE);
    Result := Header.RecordSize;
end;
//------------------------------------------------------------------------------
function Monitors_Get_Element_AnsiString(): Ansistring; inline;
var
    pMon: TMonitorObj;
begin
    if ActiveCircuit = NIL then
        Exit;
    pMon := ActiveCircuit.Monitors.Active;
    if pMon = NIL then
        Exit;
    Result := pMon.ElementName;
end;
